--- a/Scripts/Final_Scripts/analyses/2_gam.Rmd
+++ b/Scripts/Final_Scripts/analyses/2_gam.Rmd
@@ -6,6 +6,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(RColorBrewer)
 library(terra)
 library(tidyverse)
+library(tidyr)
 library(here)
 library(ggplot2)
 library(mgcv)
@@ -13,6 +14,10 @@ library(mgcViz)
 library(rgl)
 library(gratia)
 library(gtools)
+library(scales)
+library(patchwork)
+library(purrr)
+library(dplyr)
 
 ```
 
@@ -338,7 +343,6 @@ select_effects_function <- function (df_analyses, xaxis_variable_in_quotes,
 
 
 ```
-
 
 #Step 5a (i) Trends in annual temp and RE across veg formations ### DO NOT RUN 
 ```{r}
@@ -981,3 +985,124 @@ remove(savanna_plot_df, grass_plot_df, forest_plot_df,
 ```
 
 #Step 5b (iii) - Trends in burned area, annual temp and re  ### DO NOT RUN 
+
+#Step 5c - Visualization of univariate relationships
+```{r}
+increase_model_extractsmooths <- function (gam_model, outputsmooth_file_name_in_quotes){
+  significant_onevariable_smooths <- gratia::smooth_estimates(gam_model,
+                                                select = c("s(anthropic_dist)", "s(trend_re)",
+                                                           "s(trend_annualtemp)",  "s(trend_heatwave)", 
+                                                           "s(trend_spei)", "s(trend_burnedarea)",
+                                                           "s(mean_re)", "s(mean_at)", "s(mean_spei)", 
+                                                           "s(mean_burnedarea)", "s(mean_savanna_percentage)",
+                                                           "s(mean_grass_percentage)", "s(mean_forest_percentage)"),
+                                                n=100, unconditional = TRUE) %>%
+  mutate(ci_low= .estimate - .se * 1.96,
+         ci_high = .estimate + .se * 1.96)
+  significant_onevariable_smooths 
+}
+increase_significant_onevariablesmooths <- increase_model_extractsmooths(inc_gam)
+increase_significant_onevariablesmooths <- increase_significant_onevariablesmooths %>% mutate(TrajType ="Increase")
+
+decrease_model_extractsmooths <- function (gam_model, outputsmooth_file_name_in_quotes){
+  significant_onevariable_smooths <- gratia::smooth_estimates(gam_model,
+                                                select = c("s(anthropic_dist)", "s(trend_re)",
+                                                           "s(trend_annualtemp)", "s(trend_spei)", "s(trend_burnedarea)",
+                                                           "s(mean_re)", "s(mean_at)", "s(mean_heatwave)",
+                                                           "s(mean_spei)", "s(mean_burnedarea)",
+                                                           "s(mean_grass_percentage)", "s(mean_forest_percentage)"),
+                                                n=100, unconditional = TRUE) %>%
+  mutate(ci_low= .estimate - .se * 1.96,
+         ci_high = .estimate + .se * 1.96)
+  significant_onevariable_smooths
+}
+decrease_significant_onevariablesmooths <- decrease_model_extractsmooths(dec_gam)
+decrease_significant_onevariablesmooths <- decrease_significant_onevariablesmooths %>% mutate(TrajType ="Decrease")
+
+
+bothmodels_all_commonvar_labels <- read_csv(here("Outputs", "AnalysesResults", "GAMResults", "both_model_common_var_labels.csv"))
+bothmodels_all_commonvar_list <- bothmodels_all_commonvar_labels$vars
+bothmodels_all_commonvar_plots <- list(length = length(bothmodels_all_commonvar_list))
+
+commonvar_plots <- purrr::map(bothmodels_all_commonvar_list, function(var){
+  
+   x_label <- bothmodels_all_commonvar_labels$label[bothmodels_all_commonvar_labels$vars == var]
+    if (bothmodels_all_commonvar_labels$parse[bothmodels_all_commonvar_labels$vars == var]) {
+      x_label <- parse(text = x_label)
+    }
+  
+  data_df <- analyses_df_noNA_nooutliers %>%
+      dplyr::select(all_of(var)) %>%
+      dplyr::rename(z = 1)
+  density <- ggplot(data_df, aes(x = z)) +
+      geom_density(colour = "grey70", fill = "grey90", alpha = 0.6) +
+      theme_void()
+  
+  increase_smooth_df <- increase_significant_onevariablesmooths  %>%
+      dplyr::select(.smooth, .type, .estimate, .se, ci_low, ci_high, all_of(var), TrajType) %>%
+      rename(var0 = 7) %>%
+      drop_na()
+  decrease_smooth_df <- decrease_significant_onevariablesmooths  %>%
+      dplyr::select(.smooth, .type, .estimate, .se, ci_low, ci_high, all_of(var), TrajType) %>%
+      rename(var0 = 7) %>%
+      drop_na()
+  smooth_df <- bind_rows(increase_smooth_df, decrease_smooth_df)  
+  
+  plot <- ggplot(smooth_df, aes(x = var0, y = .estimate, group = TrajType, colour = TrajType, fill = TrajType)) +
+    geom_ribbon(aes(ymin = ci_low, ymax = ci_high), alpha = 0.7) + 
+    geom_line(alpha = 0.8, lwd = 0.6) + 
+  scale_fill_manual(values = c("#6699cc", "#8dbfa8"), name ="Trajectory Type") + 
+  scale_color_manual(values = c("#3399ff", "#26897E")) +
+  scale_x_continuous( labels = label_number()) +
+  labs(x = x_label,
+         y = "Partial effect") +
+    theme_classic() + theme(legend.position="none")
+  
+  density + plot +
+    patchwork::plot_layout(ncol = 1, nrow = 2, widths = 4, heights = c(1, 4))
+})
+
+#additional plots of variables significant only in one model
+additional_plots <- function (var, model_smooth_df, x_label, fill_color, line_color){
+  data_df <- analyses_df_noNA_nooutliers %>%
+      dplyr::select(var) %>%
+      dplyr::rename(z = 1)
+  density <- ggplot(data_df, aes(x = z)) +
+      geom_density(colour = "grey70", fill = "grey90", alpha = 0.6) +
+      theme_void()
+  
+  smooth_df <- model_smooth_df  %>%
+      dplyr::select(.smooth, .type, .estimate, .se, ci_low, ci_high, var, TrajType) %>%
+      rename(var0 = 7) %>%
+      drop_na()
+  
+  plot <- ggplot(smooth_df, aes(x = var0, y = .estimate, group = TrajType, colour = TrajType, fill = TrajType)) +
+    geom_ribbon(aes(ymin = ci_low, ymax = ci_high), alpha = 0.7) + 
+    geom_line(alpha = 0.8, lwd = 0.6) + 
+  scale_fill_manual(values = fill_color, name ="Trajectory Type") + 
+  scale_color_manual(values = line_color) +
+  scale_x_continuous( labels = label_number()) +
+  labs(x = x_label,
+         y = "Partial effect") +
+    theme_classic() + theme(legend.position="none")
+  
+  x <- density + plot +
+    patchwork::plot_layout(ncol = 1, nrow = 2, widths = 4, heights = c(1, 4))
+  x
+}
+
+mean_savanna_increase <- additional_plots("mean_savanna_percentage", increase_significant_onevariablesmooths, "mean savanna formation proportion (%)", "#8dbfa8","#26897E")
+trend_heatwave_increase <- additional_plots("trend_heatwave", increase_significant_onevariablesmooths, "trend in heatwaves", "#8dbfa8","#26897E")
+mean_heatwave_decrease <- additional_plots("mean_heatwave", decrease_significant_onevariablesmooths, "mean number of heatwaves", "#6699cc","#3399ff")
+
+gam_plot1 <- ggpubr::ggarrange(plotlist = commonvar_plots[c(1,6:11)], labels=c("a)", "b)", "c)", "d)", "e)", "f)", "g)"),
+                      ncol = 3, nrow = 3, common.legend = TRUE)
+gam_plot2 <- ggpubr::ggarrange(plotlist = commonvar_plots[c(2:5)], trend_heatwave_increase, mean_savanna_increase, mean_heatwave_decrease, 
+                               labels=c("a)", "b)", "c)", "d)", "e)", "f)", "g)"),
+                      ncol = 3, nrow = 3, common.legend = TRUE)
+ggsave(here("Outputs", "AnalysesResults", "GAMResults", "oneway_variablepartialeffects_means.png"),
+       gam_plot1,dpi = 700, height = 40, width=40, units = "cm")
+ggsave(here("Outputs", "AnalysesResults", "GAMResults", "oneway_variablepartialeffects_trends_others.png"),
+       gam_plot2,dpi = 700, height = 40, width=40, units = "cm")
+
+```
